--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "uuid": "1f9a4725-c699-4b94-bd50-e05eecb0553c"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "17.9.1",
+    "npm": "8.19.2"
   },
   "license": "MIT"
 }
