--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-users-permissions": "4.5.3",
     "@strapi/provider-email-sendgrid": "^4.5.4",
     "@strapi/strapi": "4.5.3",
+    "axios": "^1.4.0",
     "mysql": "2.18.1",
     "pg": "^8.10.0",
     "pg-connection-string": "^2.5.0",
