--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ DATABASE_SSL=false
 SENDGRID_API_KEY=tobemodified
 EMAIL_DEFAULT_FROM=noreply@vlance.com
 EMAIL_DEFAULT_REPLY_TO=noreply@vlance.com
+EMAIL_ADMIN=
+PASSWORD_ADMIN=
